--- a/TrafficLights.Auth.API/appsettings.json
+++ b/TrafficLights.Auth.API/appsettings.json
@@ -7,9 +7,11 @@
     }
   },
   "AllowedHosts": "*",
-
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=EFLightsDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "Auth": {
+    "Issuer": "authServer",
+    "Audience": "resourceServer",
+    "Secret": "secretKey1234567789+-",
+    //TODO pass as enviroment variable
+    "TokenLifetime": "3600"
   }
-
 }
